--- a/SensorApp/mobile/src/main/res/layout/activity_main.xml
+++ b/SensorApp/mobile/src/main/res/layout/activity_main.xml
@@ -12,20 +12,11 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/accelX"
+            android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hello" />
-        <TextView
-            android:id="@+id/accelY"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="hello" />
-        <TextView
-            android:id="@+id/accelZ"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="hello" />
+            android:text="idle" />
+
 
     </LinearLayout>
 
