--- a/SensorApp/mobile/src/main/res/layout/activity_main.xml
+++ b/SensorApp/mobile/src/main/res/layout/activity_main.xml
@@ -38,6 +38,13 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_file"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="file"/>
+
     </LinearLayout>
 
 </FrameLayout>
