--- a/SensorApp/mobile/src/main/res/layout/activity_file.xml
+++ b/SensorApp/mobile/src/main/res/layout/activity_file.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FileActivity">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        app:title="Files"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorGray"
+        android:elevation="4dp"
+        ></android.support.v7.widget.Toolbar>
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#555555"
-        android:listSelector="@drawable/list_item_background"
         android:divider="#aaaaaa"
         android:dividerHeight="3px"
-        ></ListView>
+        android:listSelector="@drawable/list_item_background"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"></ListView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
